WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
264945
MediaPlayerPrivateMediaStreamAVFObjC is not handling aspect ratio preservation signal from HTMLMediaElement
https://bugs.webkit.org/show_bug.cgi?id=264945
Summary
MediaPlayerPrivateMediaStreamAVFObjC is not handling aspect ratio preservatio...
youenn fablet
Reported
2023-11-16 06:35:10 PST
MediaPlayerPrivateMediaStreamAVFObjC is not handling aspect ratio preservation signal from HTMLMediaElement
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-11-16 06:42:12 PST
<
rdar://problem/118508190
>
youenn fablet
Comment 2
2023-11-16 07:11:15 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20606
EWS
Comment 3
2023-11-17 02:25:29 PST
Committed
270874@main
(a8751d345981): <
https://commits.webkit.org/270874@main
> Reviewed commits have been landed. Closing PR #20606 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug