Source/WebKit/WebProcess/GPU/webrtc/SampleBufferDisplayLayer.h
@@ -61,7 +61,7 @@ private:
     SampleBufferDisplayLayer(SampleBufferDisplayLayerManager&, WebCore::SampleBufferDisplayLayer::Client&);
 
     // WebCore::SampleBufferDisplayLayer
-    void initialize(bool hideRootLayer, WebCore::IntSize, CompletionHandler<void(bool)>&&) final;
+    void initialize(bool hideRootLayer, WebCore::IntSize, bool shouldMaintainAspectRatio, CompletionHandler<void(bool)>&&) final;
 #if !RELEASE_LOG_DISABLED
     void setLogIdentifier(String&&) final;
 #endif
@@ -76,6 +76,7 @@ private:
     void enqueueVideoFrame(WebCore::VideoFrame&) final;
     void clearVideoFrames() final;
     PlatformLayer* rootLayer() final;
+    void setShouldMaintainAspectRatio(bool) final;
 
     // GPUProcessConnection::Client
     void gpuProcessConnectionDidClose(GPUProcessConnection&) final;
